formatting backend database json structure and started serving adjustment

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Website to collect and show recipies.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Robby Nervig",
   "license": "MIT",
